@@ -1,0 +1,1 @@
+PASS: Draw commands with big numbers cause no problems.
